--- a/.github/pr-workflow.yml
+++ b/.github/pr-workflow.yml
@@ -1,11 +1,11 @@
 name: PR Workflow
 on: 
-  - push:
-      branches: 
-        - main
-  - pull_request:
-      branches:
-        - main
+  push:
+    branches: 
+      - main
+  pull_request:
+    branches:
+      - main
 
 permissions:
   packages: write
