--- a/.github/workflows/branch-workflow.yml
+++ b/.github/workflows/branch-workflow.yml
@@ -1,8 +1,8 @@
 name: Dev Branch Workflow
 on: 
-  - push
-      branches: 
-        - dev/**
+  push:
+    branches: 
+      - dev/**
 
 jobs:
   checkout:
