--- a/component-test/docker-compose.yml
+++ b/component-test/docker-compose.yml
@@ -7,4 +7,4 @@ services:
     depends_on:
       - web
   web:
-    image: ghcr.io/${docker_username}micronaut-app:latest
+    image: ghcr.io/${docker_username}micronaut-app:${GIT_COMMIT}
