--- a/.github/workflows/pr-workflow.yml
+++ b/.github/workflows/pr-workflow.yml
@@ -83,7 +83,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Execute component test
-        run: chmod +x ci/component-test.sh && GIT_COMMIT="GA-$GITHUB_SHA" && ci/component-test.sh
+        run: chmod +x ci/component-test.sh && DOCKER_TAG="1.0-${GIT_COMMIT::8}" && ci/component-test.sh
 
   perf-test:
     needs: [docker-image]
@@ -93,4 +93,4 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Execute component test
-        run: chmod +x ci/performance-test.sh  && GIT_COMMIT="GA-$GITHUB_SHA" && ci/performance-test.sh 
+        run: chmod +x ci/performance-test.sh  && DOCKER_TAG="1.0-${GIT_COMMIT::8}" && ci/performance-test.sh 
